Add Gradle task reference and update BUILDING
Add a dedicated Gradle task reference and overhaul the getting-started build docs. README now links into docs/getting-started/BUILDING.md and the new GRADLE_TASKS.md; dependency note updated to mention Gradle-managed LWJGL natives and JNA. BUILDING.md was rewritten and expanded (renamed/retitled for Open-Towns) to clarify source layout, Java toolchain usage, runtime asset handling, run/packaging workflows, and developer setup steps. A new docs/getting-started/GRADLE_TASKS.md was added with a command-by-command task reference and common workflows for setup, verification, and packaging.